<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="income_today">Income Today</string>
    <string name="profit_today">Profit Today</string>
    <string name="percentage">Percentage</string>
    <string name="product">Product</string>
    <string name="employee">Employee</string>
    <string name="transaction">Transaction</string>
    <string name="order">Order</string>
    <string name="customer_contact">Customer Contact</string>
    <string name="report_result">Report Result</string>
    <string name="out_money">Out Money</string>
    <string name="other">Other</string>
    <string name="tips_for_you">Tips for you</string>
    <string name="more_details">More details</string>
</resources>