<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_dashboard_icon_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_app_dashboard"
        app:layout_constraintBottom_toBottomOf="@+id/iv_dashboard_icon_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_dashboard_icon_notification"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_dashboard_icon_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_secondary"
        android:layout_marginEnd="@dimen/margin_secondary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dashboard_icon_notification">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBodyPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_secondary"
                    android:layout_marginTop="@dimen/margin_secondary"
                    android:text="@string/income_today" />

                <TextView
                    android:id="@+id/tv_dashboard_income"
                    style="@style/TextHeadingPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_secondary"
                    android:layout_marginTop="@dimen/margin_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_secondary"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBodyPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profit_today" />

                        <TextView
                            android:id="@+id/tv_dashboard_profit"
                            style="@style/TextBodyPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/color_primary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBodyPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/percentage" />

                        <TextView
                            android:id="@+id/tv_dashboard_percentage"
                            style="@style/TextBodyPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:textColor="@color/color_primary" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/color_secondary_divide">

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:image="@drawable/ic_product"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cf_home_employee"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/product" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_employee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:image="@drawable/ic_employee"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cf_home_transaction"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cf_home_product"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/employee" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_transaction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:image="@drawable/ic_transaction"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cf_home_order"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cf_home_employee"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/transaction" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:image="@drawable/ic_order"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cf_home_transaction"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/order" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_medium"
                        app:image="@drawable/ic_contact"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cf_home_report"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cf_home_product"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/customer_contact" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_medium"
                        app:image="@drawable/ic_report_result"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cf_home_money"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cf_home_contact"
                        app:layout_constraintTop_toBottomOf="@+id/cf_home_employee"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/report_result" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_medium"
                        app:image="@drawable/ic_money_out"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cf_home_other"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cf_home_report"
                        app:layout_constraintTop_toBottomOf="@+id/cf_home_transaction"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/out_money" />

                    <com.implizstudio.android.app.components.card.CardFeature
                        android:id="@+id/cf_home_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_medium"
                        app:image="@drawable/ic_other"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cf_home_money"
                        app:layout_constraintTop_toBottomOf="@+id/cf_home_order"
                        app:layout_constraintVertical_bias="0.0"
                        app:name="@string/other" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_secondary"
                    android:layout_marginTop="@dimen/margin_secondary"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextButtonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tips_for_you"
                        android:textColor="@color/color_primary_text" />

                    <TextView
                        style="@style/TextCaptionPrimary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/ic_see_all"
                        android:gravity="end"
                        android:text="@string/more_details"
                        android:textColor="@color/color_primary"
                        tools:ignore="UseCompatTextViewDrawableXml" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/adapter_tip" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>